--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "meu-app",
     "slug": "meu-app",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "packagerOpts": {
       "config": "metro.config.js",
       "sourceExts": [
@@ -35,18 +37,20 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.guilhermeriberio.meuapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "extra": {
       "google": {
-        "clientId": "809187207629-hjish63eh4n97rs9945iff5ie20rld40.apps.googleusercontent.com"  
+        "clientId": "809187207629-hjish63eh4n97rs9945iff5ie20rld40.apps.googleusercontent.com"
       },
       "eas": {
         "projectId": "d6e3f025-2412-4474-813b-29c9c6436719"
       }
-    }
+    },
+    "owner": "guilhermeriberio"
   }
 }
