--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "bcryptjs": "^2.4.3",
     "expo": "^52.0.11",
     "expo-auth-session": "~6.0.1",
     "expo-file-system": "^18.0.4",
